07-07-2015 *2.0.0*
------------------

* Version incompatible with any 1.x.x version. Read readme for details.
* Fully asynchronous execution.
* Added 'consume message' callback.
* Logic object does not belong to the automata defintion anymore.

07-02-2015 *1.1.1*
------------------

* Module exports for node.

07-02-2015 *1.1.0*
------------------

Major changes.

* Session.dispatch and Session.processMessage dissapear in favor of Session.consume
* Session.consume accepts a callback function triggered when the FDA ends executing its message queue.
* All examples are working.
* Added methods newGuardException and newSessionListener to the module object.
* Added documentation for all object variables.
* Added doclet annotations.
* Checked readme.md
* Guards must throw a GuardException and not any exception. This exception can be created by calling module.newGuardException.

04-02-2013 *1.0.7*
------------------

* Added GuardException as a mechanism to differentiate coding exceptions from GuardedExceptions.
* Better runtime exception handling and report.
* Added methods guardPreCondition and guardPostCondition to Session lifecycle.

05-15-2010 *1.0.6*
------------------

* Fixed some bugs.
* Session logic object receives the FSM.Session as constructor parameter.
* FSMSession object's processMessage function throws an exception if no suitable transition for the current state is
  found. It will silently fail if dispatch method is called.

05-07-2012 *1.0.5*
------------------

* added convention state enter/exit, transition action/preGuard/postGuard as follows:

  state/fsm enter action:   state.name+"_enter"
  state/fsm exit action:    state.name+"_exit"

  transition action:        transition.event+"_transition"
  transition preGuard:      transition.event+"_preGuard"
  transition postGuard:     transition.event+"_postGuard"

* Top level FSM now have correct name. The one they're registered with.