@@ -18,7 +18,7 @@ function require() {
 <script src="test1.js"></script>
 <script src="test3.js"></script>
 -->
-<script src="test4.js"></script>
+<script src="test1.js"></script>
 <!--<script src="test2.js"></script>-->
 <!--<script src="test3.js"></script>-->
 <!--<script src="test4.js"></script>-->
